--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         </div>
       </section>
 
-      <!-- SECTION-TEAM -->
+      <!-- TEAM -->
       <section class="section-top section-bottom team-section">
         <div class="container">
           <h2 class="h2 team-title">Our Team</h2>
@@ -147,19 +147,42 @@
               <img
                 src="./images/img4.jpg"
                 alt="a photo of Christopher Walker"
+                width="264"
               />
               <div class="team-card-wrapper">
                 <h4 class="h4 team-name">Christopher Walker</h4>
                 <p class="team-position">Product Designer</p>
               </div>
-
-              <div class="item">
-                <a href="" class="client-link" aria-label="Клиент-1">
-                  <svg class="icon-client">
-                    <use href="./images/symbol-defs.svg#icon-instagram"></use>
-                  </svg>
-                </a>
-              </div>
+              <ul class="list social-link-list">
+                <li class="item">
+                  <a href="" class="social-item">
+                    <svg class="icon-social-link" width="20" height="20">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="item">
+                  <a href="" class="social-item"
+                    ><svg class="icon-social-link" width="20" height="20">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="item">
+                  <a href="" class="social-item"
+                    ><svg class="icon-social-link" width="20" height="20">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="item">
+                  <a href="" class="social-item"
+                    ><svg class="icon-social-link" width="20" height="20">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
 
             <li class="team-list-item">
@@ -172,6 +195,36 @@
                 <h4 class="h4 team-name">Kylie Evans</h4>
                 <p class="team-position">Frontend Developer</p>
               </div>
+              <ul class="list social-link-list">
+                <li class="item">
+                  <a href="" class="social-item">
+                    <svg class="icon-social-link" width="20" height="20">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="item">
+                  <a href="" class="social-item"
+                    ><svg class="icon-social-link" width="20" height="20">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="item">
+                  <a href="" class="social-item"
+                    ><svg class="icon-social-link" width="20" height="20">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="item">
+                  <a href="" class="social-item"
+                    ><svg class="icon-social-link" width="20" height="20">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li class="team-list-item">
               <img
@@ -183,6 +236,36 @@
                 <h4 class="h4 team-name">Ryan Harris</h4>
                 <p class="team-position">Marketing</p>
               </div>
+              <ul class="list social-link-list">
+                <li class="item">
+                  <a href="" class="social-item">
+                    <svg class="icon-social-link" width="20" height="20">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="item">
+                  <a href="" class="social-item"
+                    ><svg class="icon-social-link" width="20" height="20">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="item">
+                  <a href="" class="social-item"
+                    ><svg class="icon-social-link" width="20" height="20">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="item">
+                  <a href="" class="social-item"
+                    ><svg class="icon-social-link" width="20" height="20">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li class="team-list-item">
               <img
@@ -194,32 +277,141 @@
                 <h4 class="h4 team-name">Tyler Moore</h4>
                 <p class="team-position">UI Designer</p>
               </div>
+              <ul class="list social-link-list">
+                <li class="item">
+                  <a href="" class="social-item">
+                    <svg class="icon-social-link" width="20" height="20">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="item">
+                  <a href="" class="social-item"
+                    ><svg class="icon-social-link" width="20" height="20">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="item">
+                  <a href="" class="social-item"
+                    ><svg class="icon-social-link" width="20" height="20">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="item">
+                  <a href="" class="social-item"
+                    ><svg class="icon-social-link" width="20" height="20">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
           </ul>
         </div>
       </section>
     </main>
-
-    <!-- FOOTER -->
-    <footer class="footer">
+    <!--Regular Customers-->
+    <section class="section-top section-bottom">
       <div class="container">
-        <a class="logo logo-footer" href="./index.html"
-          ><span class="logo-accent">Web</span>Studio</a
-        >
-        <address class="footer-address">695 Park Ave, NY 10065, USA</address>
-
-        <ul class="list footer-contacts-list">
-          <li>
-            <a class="contacts-list-item" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
+        <h2 class="h2 services-title">Regular Customers</h2>
+        <ul class="list client-list">
+          <li class="item">
+            <a href="" class="client-link" aria-label="Client-1">
+              <svg class="icon-client">
+                <use href="./images/icons.svg#icon-logo"></use>
+              </svg>
+            </a>
           </li>
-          <li>
-            <a class="contacts-list-item" href="tel:+11(000)1111111"
-              >+11 (000) 111-11-11</a
-            >
+          <li class="item">
+            <a href="" class="client-link" aria-label="Client-2">
+              <svg class="icon-client">
+                <use href="./images/icons.svg#icon-logo2"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="item">
+            <a href="" class="client-link" aria-label="Client-3">
+              <svg class="icon-client">
+                <use href="./images/icons.svg#icon-logo3"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="item">
+            <a href="" class="client-link" aria-label="Client-4">
+              <svg class="icon-client">
+                <use href="./images/icons.svg#icon-logo4"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="item">
+            <a href="" class="client-link" aria-label="Client-5">
+              <svg class="icon-client">
+                <use href="./images/icons.svg#icon-logo5"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="item">
+            <a href="" class="client-link" aria-label="Client-6">
+              <svg class="icon-client">
+                <use href="./images/icons.svg#icon-logo6"></use>
+              </svg>
+            </a>
           </li>
         </ul>
+      </div>
+    </section>
+
+    <!--FOOTER -->
+    <footer class="footer">
+      <div class="container">
+        <div class="footer-flex">
+          <div>
+            <a href="./index.html" class="logo"
+              ><span class="logo-accent">Web </span
+              ><span class="logo-regular invers">Studio</span></a
+            >
+            <address>
+              <p class="item">695 Park Ave, NY 10065, USA</p>
+              <span class="item adress-transparency">info@devstudio.com</span>
+              <span class="item adress-transparency">+1 212-772-4150</span>
+            </address>
+          </div>
+          <div>
+            <b class="footer-offer">Find us on</b>
+            <ul class="list footer-soclink">
+              <li class="item">
+                <a class="social-link" href="" aria-label="Instagram">
+                  <svg class="footer-social-link" width="20" height="20">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="item">
+                <a href="" aria-label="Twitter" class="social-link">
+                  <svg class="footer-social-link" width="20" height="20">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="item">
+                <a href="" aria-label="Facebook" class="social-link">
+                  <svg class="footer-social-link" width="20" height="20">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="item">
+                <a href="" aria-label="LinkedIn" class="social-link">
+                  <svg class="footer-social-link" width="20" height="20">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </footer>
   </body>
