--- a/portfolio.html
+++ b/portfolio.html
@@ -39,15 +39,21 @@
           </ul>
         </nav>
         <ul class="list contacts-list">
-          <li>
-            <a class="contacts-list-item" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
+          <li class="item">
+            <a class="contacts-list-item" href="mailto:info@devstudio.com">
+              <svg class="icon-nav">
+                <use href="./images/icons.svg#icon-envelope"></use>
+              </svg>
+              <span>info@devstudio.com</span>
+            </a>
           </li>
-          <li>
+          <li class="item">
             <a class="contacts-list-item" href="tel:+12127724150"
-              >+1 212-772-4150</a
-            >
+              ><svg class="icon-nav">
+                <use href="./images/icons.svg#icon-smartphone"></use>
+              </svg>
+              <span>+1 212-772-4150</span>
+            </a>
           </li>
         </ul>
       </div>
@@ -201,27 +207,55 @@
         </div>
       </section>
     </main>
-
-    <!-- FOOTER -->
+    <!--FOOTER -->
     <footer class="footer">
       <div class="container">
-        <a class="logo logo-footer" href="./index.html"
-          ><span class="logo-accent">Web</span>Studio</a
-        >
-        <address class="footer-address">695 Park Ave, NY 10065, USA</address>
-
-        <ul class="list footer-contacts-list">
-          <li>
-            <a class="contacts-list-item" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
+        <div class="footer-flex">
+          <div>
+            <a href="./index.html" class="logo"
+              ><span class="logo-accent">Web </span
+              ><span class="logo-regular invers">Studio</span></a
             >
-          </li>
-          <li>
-            <a class="contacts-list-item" href="tel:+11(000)1111111"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
+            <address>
+              <p class="item">695 Park Ave, NY 10065, USA</p>
+              <span class="item adress-transparency">info@devstudio.com</span>
+              <span class="item adress-transparency">+1 212-772-4150</span>
+            </address>
+          </div>
+          <div>
+            <b class="footer-offer">Find us on</b>
+            <ul class="list footer-soclink">
+              <li class="item">
+                <a class="social-link" href="" aria-label="Instagram">
+                  <svg class="footer-social-link" width="20" height="20">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="item">
+                <a href="" aria-label="Twitter" class="social-link">
+                  <svg class="footer-social-link" width="20" height="20">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="item">
+                <a href="" aria-label="Facebook" class="social-link">
+                  <svg class="footer-social-link" width="20" height="20">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="item">
+                <a href="" aria-label="LinkedIn" class="social-link">
+                  <svg class="footer-social-link" width="20" height="20">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </footer>
   </body>
